fixed text align in home option

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3537,7 +3537,7 @@ ul.breadcrumbs li .breadcrumb-separator {
 
 /*********************** Home ******************************/
 .home-page > h1,
-.home-page .home-option > p,
+.home-option > p,
 .home-buttons {
     text-align: center;
 }
